--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div id='root'>
+    <div>이곳에 폴더 형식의 뷰를 만들어 보세요!</div>
+  </div>
+  <script src="./index.js"></script>
 </body>
 </html>
