add recursion function and little fix on data.js

--- a/result.html
+++ b/result.html
@@ -99,7 +99,7 @@
         <span>과일</span>
         <ul>
           <li>하루 한 컵 RED</li>
-          <li>한라봉 가등 핸디 젤리</li>
+          <li>한라봉 가득 핸디 젤리</li>
         </ul>
       </ul>
       <ul>
